# demo-dagster

./: .gitignore  INSERT_DATA_DD.ipynb  Taskfile.yml  pyproject.toml
demo_dagster/: __init__.py  dataset.xlsx  my_op.py  my_pipeline.py
docker/: Dockerfile  Taskfile.yml  docker-compose.yml  workspace.yaml
docker/config/initdb.d/: db_depth based parameter.sql
